fast/mediastream/mediastreamtrack-video-clone.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=205006

Reviewed by Eric Carlson.

Source/WebCore:

Covered by test no longer flaky.

* platform/mediastream/RealtimeVideoSource.cpp:
(WebCore::RealtimeVideoSource::clone):
When cloning the source, clone its size in addition to its settings.

LayoutTests:

* fast/mediastream/mediastreamtrack-video-clone-expected.txt:
* fast/mediastream/mediastreamtrack-video-clone.html:
Add br to spot any potential issue with video elements to text dump.


Canonical link: https://commits.webkit.org/218232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253285 268f45cc-cd09-0410-ab3c-d52691b4dbfc